# mp2.0

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Dockerfile  MP2.0_Seed_Context_1.md  MP2.0_Seed_Context_2.md  MP2.0_Working_Canon.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: smoke.yml
docs/agent/: bedrock-spend-2026-05-03.md  decisions.md  demo-restore-runbook.md  demo-script-2026-05-04.md  demo-talk-track-2026-05-05.md  design-system-research.md  design-system.md  engine-ui-display-starter-prompt.md  extraction-audit.md  extraction-coverage.md  handoff-log.md  next-session-kickoff-2026-05-01.md  next-session-starter-prompt.md  open-questions.md  ops-runbook.md  p1-1-fix-starter-prompt.md  phase7-validation-results-2026-05-03.md  phase9-fact-quality-iteration.md  pilot-readiness-2026-05-04.md  pilot-rollback.md  pilot-success-metrics.md  pilot-walkthrough-2026-05-04.md  portfolio-v2-implementation-checklist.md  post-pilot-improvements.md  post-r7-handoff-2026-05-01.md  post-r8-followups.md  post-tag-gap-closure-starter-prompt.md  production-quality-bar.md  r10-bundle-and-a11y.md  r10-mockup-parity.md  r10-state-diff.md  r10-sweep-results-2026-05-02.md  r10-sweep-results-2026-05-03.md  session-state.md  sub-sessions-8-11-plan.md  ux-spec.md
docs/agent/baselines/: f5f2519.md
docs/team/: README.md  ai-doc-ingestion-deep-dive.md  architecture-diagrams.md  glossary.md  onboarding-engineer.md  product-brief.md  real-pii-handling.md  troubleshooting.md
docs/team/adr/: 0001-engine-as-library.md  0002-append-only-audit.md  CONTRIBUTING.md  (+12 more)
docs/validation/: README.md  optimizer_validation.json  optimizer_validation.md
engine/: __init__.py  collapse.py  compliance.py  frontier.py  goal_scoring.py  moves.py  optimizer.py  projections.py  risk_profile.py  schemas.py  sleeves.py  validation_pack.py
engine/fixtures/: default_cma_v1.json  fraser_v1.json  stress_household_large.json  stress_household_medium.json
engine/tests/: test_collapse.py  test_engine.py  test_engine_purity.py  test_goal_scoring.py  test_moves.py  test_optimizer_validation.py  test_projections.py  test_r8_worked_examples_match_engine.py  test_risk_profile.py  test_runtime_labels.py  test_sleeves_v36.py
extraction/: __init__.py  classification.py  entity_alignment.py  layer1_ingestion.py  layer2_text.py  layer3_facts.py  layer4_reconcile.py  layer5_review.py  llm.py  normalization.py  parsers.py  pipeline.py  reconciliation.py  schemas.py  validation.py
extraction/prompts/: __init__.py  base.py  classify.py  generic.py  kyc.py  meeting_note.py  planning.py  statement.py
extraction/tests/: test_alignment_overhead.py  test_entity_alignment.py  test_entity_alignment_merge_candidates.py  test_entity_alignment_properties.py  test_phase9_evidence_validation.py  test_prompts_interpolation.py  test_reconciliation_baseline.py  test_reconciliation_properties.py  test_vision_pdf_path.py
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: cross-browser-smoke.spec.ts  foundation.spec.ts  manual-entry-flow.spec.ts  pilot-features-smoke.spec.ts  portfolio-cma.spec.ts  real-browser-smoke.spec.ts  real-bundle-regression.spec.ts  regression-coverage.spec.ts  synthetic-review.spec.ts  visual-verification.spec.ts
frontend/src/: App.tsx  CmaWorkbench.tsx  ReviewShell.tsx  api.ts  index.css  main.tsx  styles.css  types.ts
integrations/: __init__.py
integrations/conquest/: __init__.py
integrations/croesus/: __init__.py  client.py
integrations/custodian/: __init__.py
integrations/llm/: __init__.py  anthropic_provider.py  bedrock_provider.py  client.py
integrations/pdf_render/: __init__.py
personas/sandra_mike_chen/: client_state.json
scripts/: check-openapi-codegen.sh  check-pii-leaks.sh  check-vocab.sh  generate-validation-pack.py  reset-v2-dev.sh  test-python-postgres.sh
scripts/demo-prep/: r10_sweep.py  test_r10_sweep.py  upload_and_drain.py
web/: __init__.py  manage.py
web/api/: __init__.py  access.py  account_helpers.py  admin.py  apps.py  engine_adapter.py  error_codes.py  models.py  preview_views.py  review_processing.py  review_redaction.py  review_security.py  review_serializers.py  review_state.py  serializers.py  types.py  views.py  wizard_views.py
web/audit/: apps.py  models.py  writer.py
web/mp20_web/: __init__.py  asgi.py  json_logging.py  otel.py  request_id.py  settings.py  urls.py  wsgi.py
web/permissions/: __init__.py  permissions.py
(+220 files in other folders)
